tests-integration/fixtures/checking/250_given_deep_name_improvement/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
needsAdd :: forall (x :: Int). Add 1 (x :: Int) 3 => Proxy @Int (x :: Int)
nonHeadGivenImprovement ::
  forall (n :: Int).
    Union @Type ( a :: Proxy @Int (n :: Int) ) () ( a :: Proxy @Int 2 ) => Proxy @Int (n :: Int)
forceSolve :: { nonHeadGivenImprovement :: Proxy @Int 2 }

Types

Diagnostics
error[NoInstanceFound]: No instance found for: Add 1 (t3 :: Int) 3
  --> 10:1..13:13
   |
10 | nonHeadGivenImprovement
   | ^~~~~~~~~~~~~~~~~~~~~~~
